--- a/jogos/jogo.css
+++ b/jogos/jogo.css
@@ -11,7 +11,7 @@
 /* Estilo do tabuleiro e dos cards */
 #game-board {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Quatro colunas fixas */
+    grid-template-columns: repeat(4, 1fr); 
     gap: 10px;
     max-width: 450px;
     margin: 0 auto;
@@ -56,7 +56,7 @@
 }
 
 /*Estilo para botões*/
-.btn {
+main .btn {
     padding: 10px 30px;
     font-size: 18px; 
     color: white;
@@ -71,7 +71,7 @@
 }
 
 /* Hover: efeito ao passar o mouse */
-.btn:hover {
+main .btn:hover {
     background-color: #dba503;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
 }
